--- a/app/src/main/res/layout/activity_carimbo_definitivo.xml
+++ b/app/src/main/res/layout/activity_carimbo_definitivo.xml
@@ -154,6 +154,7 @@
                     android:ems="10"
                     android:inputType="textPersonName"
                     android:minHeight="48dp"
+                    android:text="FFRFRF"
                     app:layout_constraintEnd_toStartOf="@+id/guideline3"
                     app:layout_constraintStart_toStartOf="@+id/guideline2"
                     app:layout_constraintTop_toBottomOf="@+id/textNomeProjeto" />
