--- a/app/src/main/res/layout/activity_carimbo_unico.xml
+++ b/app/src/main/res/layout/activity_carimbo_unico.xml
@@ -40,6 +40,7 @@
                 android:layout_marginTop="16dp"
                 android:layout_marginEnd="8dp"
                 android:ems="10"
+                android:hint="@string/TxtCarimboUnicoHint"
                 android:inputType="date|datetime"
                 android:minHeight="48dp"
                 app:layout_constraintEnd_toStartOf="@+id/guideline5"
