--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -16,6 +16,8 @@
         <item name="android:colorBackground">#FFFFFF</item>
         <item name="materialButtonStyle">@style/ButtonPadrao</item>
         <item name="imageButtonStyle">@style/ImageButton</item>
+        <item name="editTextStyle">@style/Edit_Text</item>
+
 
 
 
@@ -23,14 +25,13 @@
 
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/color_primary</item>
-        <item name="colorSecondaryVariant">@color/teal_700</item>
 
         <!--Button flutuante-->
         <item name="colorOnSecondary">@color/fundo</item>
 
 
         <!-- Status bar color. -->
-        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
+        <item name="android:statusBarColor" tools:targetApi="l">@color/color_primary</item>
 
         <!--Styles do aplicativo. -->
     </style>
