--- a/app/src/main/res/layout/activity_carimbo_unico.xml
+++ b/app/src/main/res/layout/activity_carimbo_unico.xml
@@ -40,6 +40,7 @@
                 android:layout_marginTop="16dp"
                 android:layout_marginEnd="8dp"
                 android:ems="10"
+
                 android:hint="@string/TxtCarimboUnicoHint"
                 android:inputType="date|datetime"
                 android:minHeight="48dp"
@@ -85,17 +86,6 @@
                 app:layout_constraintEnd_toStartOf="@+id/guideline5"
                 app:layout_constraintStart_toStartOf="@+id/guideline4"
                 app:layout_constraintTop_toBottomOf="@+id/editTextNivelFuro" />
-
-            <Button
-                android:id="@+id/buttonPegarLocalizacao"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:drawableLeft="@drawable/icon_localization"
-                android:text="@string/TxtBotaoLocalizacao"
-                app:layout_constraintEnd_toStartOf="@+id/guideline5"
-                app:layout_constraintStart_toStartOf="@+id/guideline4"
-                app:layout_constraintTop_toBottomOf="@+id/textCoordenadasFuro" />
 
             <androidx.constraintlayout.widget.Guideline
                 android:id="@+id/guideline4"
@@ -149,6 +139,17 @@
                 app:layout_constraintStart_toEndOf="@+id/buttonPegarLocalizacao"
                 app:layout_constraintTop_toTopOf="@+id/buttonPegarLocalizacao"
                 app:srcCompat="@android:drawable/ic_menu_help" />
+
+            <Button
+                android:id="@+id/buttonPegarLocalizacao"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:drawableLeft="@drawable/icon_localization"
+                android:text="@string/TxtBotaoLocalizacao"
+                app:layout_constraintEnd_toEndOf="@+id/textCoordenadasFuro"
+                app:layout_constraintStart_toStartOf="@+id/textCoordenadasFuro"
+                app:layout_constraintTop_toBottomOf="@+id/textCoordenadasFuro" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
