--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,18 +1,19 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Padrão do tema claro . -->
-    <style name="Theme.MontaigneApp" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+    <style name="Theme.MontaigneApp" parent="Theme.MaterialComponents.Light.NoActionBar">
 
 
 
         <!-- Primary color. -->
         <item name="colorPrimary">@color/color_primary</item>
-        <item name="colorPrimaryVariant">#000000</item>
+        <item name="colorPrimaryVariant">@color/black</item>
         <item name="colorOnPrimary">@color/white</item>
 
 
         <!-- Estilos padrão. -->
         <item name="android:textColor">@color/black</item>
-        <item name="android:colorAccent">@color/accent</item>
+        <item name="colorAccent">@color/accent</item>
+        <item name="android:textColorHint">@color/hint</item>
         <item name="android:colorBackground">#FFFFFF</item>
         <item name="materialButtonStyle">@style/ButtonPadrao</item>
         <item name="imageButtonStyle">@style/ImageButton</item>
@@ -27,7 +28,7 @@
         <item name="colorSecondary">@color/color_primary</item>
 
         <!--Button flutuante-->
-        <item name="colorOnSecondary">@color/fundo</item>
+        <item name="colorOnSecondary">@color/white</item>
 
 
         <!-- Status bar color. -->
@@ -44,7 +45,6 @@
     <style name="Theme.MontaigneApp.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
     <style name="Theme.MontaigneApp.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
-
 
 
 
