--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -13,8 +13,10 @@
         <!-- Estilos padrão. -->
         <item name="android:textColor">@color/black</item>
         <item name="colorAccent">@color/accent</item>
+        //fundo
+        <item name="backgroundColor">#FFFFFF</item>
+
         <item name="android:textColorHint">@color/hint</item>
-        <item name="android:colorBackground">#FFFFFF</item>
         <item name="materialButtonStyle">@style/ButtonPadrao</item>
         <item name="imageButtonStyle">@style/ImageButton</item>
         <item name="editTextStyle">@style/Edit_Text</item>
